# cpp-telemetry-opentelemetry

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.zh_CN.md  LICENSE  README.md  README.zh_CN.md  WORKSPACE  build.sh
.github/workflows/: ci.yml
cmake/: com_github_opentelemetry_cpp.cmake  com_github_opentelemetry_proto.cmake  com_github_trpc_cpp.cmake
cmake/tools/: opentelemetry_cpp_CMakeLists.txt
examples/: README.md  run.sh
examples/client/: BUILD  client.cc  trpc_cpp_fiber.yaml
examples/proxy/: BUILD  forward.proto  forward_server.cc  forward_service.cc  forward_service.h  trpc_cpp_fiber.yaml
examples/server/: BUILD  greeter_service.cc  greeter_service.h  helloworld_server.cc  trpc_cpp_fiber.yaml
trpc/: BUILD  workspace.bzl
trpc/telemetry/opentelemetry/: BUILD  opentelemetry_client_filter.cc  opentelemetry_client_filter.h  opentelemetry_client_filter_test.cc  opentelemetry_common.h  opentelemetry_log_handler.cc  opentelemetry_log_handler.h  opentelemetry_server_filter.cc  opentelemetry_server_filter.h  opentelemetry_server_filter_test.cc  opentelemetry_telemetry.cc  opentelemetry_telemetry.h  opentelemetry_telemetry_api.cc  opentelemetry_telemetry_api.h  opentelemetry_telemetry_conf.cc  opentelemetry_telemetry_conf.h  opentelemetry_telemetry_conf_parser.h  opentelemetry_telemetry_conf_test.cc  opentelemetry_telemetry_test.cc
trpc/telemetry/opentelemetry/logging/: BUILD  common.h  grpc_log_exporter.cc  grpc_log_exporter.h  grpc_log_exporter_test.cc  opentelemetry_logging.cc  opentelemetry_logging.h  opentelemetry_logging_test.cc
(+47 files in other folders)
